Change CI commits to be authored by GitHub only

--- a/.github/workflows/gelato.yml
+++ b/.github/workflows/gelato.yml
@@ -28,10 +28,9 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Add new Jack's Gelato menu"
-          commit_user_name: "github-actions[bot]"
-          commit_user_email: "41898282+github-actions[bot]@users.noreply.github.com"
+          # CI commits should not be attributed to action author, to avoid extraneous activity
+          commit_author: "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
 
       - name: Run the tool to fail the pipeline if something broke
         run: |
           jacks-menu --fail-on-error --verbose
-
